# simple-LLM-application-with-LCEL

./: .gitignore  README.md  main.py  pyproject.toml  runnow-game-modes.txt  runnow-gamefi-elements.txt  runnow-how-to-start.txt  runnow-overview.txt  serve.py
